# compbio-projects

./: .gitignore  SYNC_WORKFLOW.md  environment_template.yml  myTestText.txt
AAV_Capsid_Design/: environment.yml
DeepRisdiplam/: analyze_donor_motifs.py  check_data_quality.py  clean_dataset.py  create_test_set_template.py  debug_synthetic_generator.py  digital_cloner.py  evaluate_false_positives.py  evaluate_new_sequences.py  forensic_analysis.py  generate_component_dataset.py  generate_model_importance_logo.py  generate_motif_logo.py  generate_motif_logo_aligned.py  generate_motif_logo_ground_truth.py  genomic_sequence_extractor.py  heal_dataset.py  heal_dataset_full.py  interpret_deep_risdiplam.py  merge_metadata.py  perform_exploratory_mutagenesis.py  perform_saturation_mutagenesis.py  test_distance_robustness.py  train_classical_baseline.py  train_debug_synthetics_only.py  train_deep_risdiplam_components.py  train_deep_risdiplam_focal_loss_v13.py  train_deep_risdiplam_guided_attention_v12.py  (+36 more)
Level_2/: CLI_bash_input_text.txt  council_mutation_results.xlsx  environment.cpu.yml  pyproject.toml  test.fa.fai
Level_2/level2/: __init__.py  cli.py  council_merge.py  council_saturation.py  debug_quartet.py  evolution.py  filter_and_generate.py  find_quartet.py  inspect_model.py  mutate.py  plot_council_saturation.py  plot_evolution.py  plot_full_evolution.py  plot_saturation.py  plot_saturation_deltas.py  reconstruct_sequences.py  regions.py  run_council.py  saturation.py  step_analysis.py
Level_2/level2/model_backends/: openspliceai.py  spliceformer.py
(+278 files in other folders)
