[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "level2"
version = "0.0.1"
description = "Mutagenesis + splice-site tracking (prototype) with OpenSpliceAI backend"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9",
  "rich>=13.0",
]

[project.scripts]
level2 = "level2.cli:main"
